<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tela_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="336dp"
        android:layout_height="48dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="200dp"
        android:text="@string/btn_entrar"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.742"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="343dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edT_passWd"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/txt_passwd"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TxTViewCafastro"
        android:layout_width="86dp"
        android:layout_height="18dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="365dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="130dp"
        android:text="@string/TxtView_cad"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="14sp"
        android:textStyle="italic"
        android:typeface="normal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.677" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="99dp"
        android:layout_height="21dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="385dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="148dp"
        android:text="@string/TxtView_redfPwd"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="14sp"
        android:textStyle="italic"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.836" />

    <View
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="6dp"
        android:layout_marginTop="465dp"
        android:layout_marginBottom="151dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnGoogleLogin"
        android:layout_width="229dp"
        android:layout_height="36dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="36dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.facebook.login.widget.LoginButton
        android:id="@+id/btnFacebookLogin"
        android:layout_width="224dp"
        android:layout_height="11dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="105dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.608" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="170dp"
        android:layout_height="159dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_pocket_personal_round" />

</android.support.constraint.ConstraintLayout>